--- a/views/person.ejs
+++ b/views/person.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="font-family: Arial, Helvetica, sans-serif">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +7,29 @@
     <title>Document</title>
     <link rel='stylesheet' href='/assets/style.css'>
 </head>
-<body>
+<body >
     <h1 style="color: red;">Person Name: <%= ID %> </h1>
-    <h2>Mensaje:
+    <h2>Mensaje: <%= Message %></h2>
+    <h3 style="font-weight: 100">
         <% switch (Message) {
             case "Hola": %>
             <% for (var i =1; i <= Times;  i++ ) { %>
-            <br/>  <%= Message %> 
-            <%#  will output the numbers 1-10 %>
+            <br/>  <%= Message %> <%= ID %> 
             <% } %>
           <% break;
             case "Bienvenido": %>
             <% for (var i =1; i <= Times;  i++ ) { %>
-            <br/>  <%= Message %> 
-            <%#  will output the numbers 1-10 %>
+            <br/>  <%= Message %> <%= ID %> 
             <% } %>
           <% break;
             case "Adios": %>
             <% for (var i =1; i <= Times;  i++ ) { %>
-            <br/>  <%= Message %> 
-            <%#  will output the numbers 1-10 %>
+            <br/>  <%= Message %> <%= ID %> 
             <% } %>
           <% break;
             default:
+            error
             break; } %>
-    </h2>
+    </h3 >
 </body>
 </html>
